--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,20 +2,41 @@
     <string name="app_name">Spotify Streamer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
+    <string name="action_nowPlaying">Now Playing</string>
 
     <string name="title_activity_top_tracks">Top 10 Tracks</string>
+    <string name="title_activity_player">Player</string>
 
     <string name="edittext_search_hint">Search by artist name</string>
 
     <string name="settings_title">Settings</string>
-    <string name="settings_general_title">General Settings</string>
+    <string name="settings_general_title">General</string>
+    <string name="settings_player_title">Player</string>
+
     <string name="settings_country_key" translatable="false">country</string>
     <string name="settings_country_default" translatable="false">US</string>
     <string name="settings_country_title">Country</string>
     <string name="settings_country_dialogTitle">Select Country</string>
 
+    <string name="settings_notification_key" translatable="false">notification</string>
+    <string name="settings_notification_default" translatable="false">true</string>
+    <string name="settings_notification_title">Notification on the lock screen</string>
+    <string name="settings_notification_on_msg">Show player notification controls on the lock screen</string>
+    <string name="settings_notification_off_msg">Don\'t show player notification controls on the lock screen</string>
+
+    <string name="settings_auto_play_key" translatable="false">autoplay</string>
+    <string name="settings_auto_play_default" translatable="false">false</string>
+    <string name="settings_auto_play_title">AutoPlay</string>
+    <string name="settings_auto_play_on_msg">Automatically play the next track</string>
+    <string name="settings_auto_play_off_msg">Play only the current track</string>
+
+
+
+
 
     <string name="error_msg_no_internet">Couldn\'t reach spotify.com\nCheck if you are connected to the internet.</string>
+    <string name="error_msg_empty_query">You must write something to search!</string>
     <string name="error_msg_no_results">No results found!</string>
     <string name="error_msg_no_results_artist">No artist named \"<xliff:g id="name">%1$s</xliff:g>\" found!</string>
     <string name="error_msg_no_results_top_track">No top tracks found for \"<xliff:g id="name">%1$s</xliff:g>\"</string>
@@ -28,6 +49,18 @@
 
     <string name="error_msg_remote_error">"Remote service error"</string>
     <string name="error_msg_unknown_error">Unknown error</string>
+
+    <string name="msg_buffering_error">"No music preview available."</string>
+    <string name="msg_buffering">"Buffering…"</string>
+    <string name="msg_playing">Playing <xliff:g id="name">%1$s</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
+    <string name="msg_paused">Paused</string>
+    <string name="msg_stoped">Stoped</string>
+
+    <string name="button_label_play">Play</string>
+    <string name="button_label_pause">Pause</string>
+    <string name="button_label_stop">Pause</string>
+    <string name="button_label_next">Next</string>
+    <string name="button_label_previous">Previous</string>
 
 
 
